Adding images to help

--- a/src/help/filters.html
+++ b/src/help/filters.html
@@ -17,10 +17,7 @@
 	</STYLE>
 </HEAD>
 <BODY LANG="pt-BR" TEXT="#000000" DIR="LTR">
-<P CLASS="western" STYLE="margin-bottom: 0in"><U><B>Execu&ccedil;&atilde;o:</B></U></P>
-<P CLASS="western" STYLE="margin-bottom: 0in"><BR>
-</P>
-<P CLASS="western" STYLE="margin-bottom: 0in">Filtros:</P>
+<H1>Filtros:</H1>
 <P CLASS="western" STYLE="margin-left: 0.24in; margin-bottom: 0in">Todos
 os filtros dessa vers&atilde;o somente s&atilde;o aplicados numa
 imagem N x N, sendo N pot&ecirc;ncia inteira de dois. A imagem tamb&eacute;m
@@ -44,8 +41,7 @@ filtros dessa vers&atilde;o s&atilde;o:</P>
 o ponto de corte clicando na imagem do espectro de fourier, ou
 digitando o valor no campo q se encontra no canto direto inferior da
 janela modal do espectro.</P>
-<P CLASS="western" STYLE="margin-left: 1.1in; margin-bottom: 0in">*********Se
-possivel imagem**********</P>
+<P CLASS="western" STYLE="margin-left: 1.1in; margin-bottom: 0in"><img src="qrc:/images/simple_filter.png" /></P>
 <P CLASS="western" STYLE="margin-left: 0.49in; margin-bottom: 0in"><BR>
 </P>
 <P CLASS="western" STYLE="margin-left: 0.49in; margin-bottom: 0in">Tipos
@@ -81,16 +77,14 @@ de Filtro de Butterworth:</P>
 <P CLASS="western" STYLE="margin-left: 0.24in; margin-bottom: 0in">	.
 Passa Baixa: 	corta as altas freq&uuml;&ecirc;ncias e deixa as
 baixas. Aplicando a fun&ccedil;&atilde;o:</P>
-<P CLASS="western" STYLE="margin-left: 0.24in; margin-bottom: 0in">		***********foto
-da fun&ccedil;&atilde;o utilizada***********</P>
+<P CLASS="western" STYLE="margin-left: 0.24in; margin-bottom: 0in"><img src="qrc:/images/bw_baixa.png" /></P>
 <P CLASS="western" STYLE="margin-left: 0.24in; margin-bottom: 0in"><BR>
 </P>
 <P CLASS="western" STYLE="margin-left: 0.24in; margin-bottom: 0in">	.
 Passa Alta: corta as baixas freq&uuml;&ecirc;ncias e deixa as altas.
 Aplicando a fun&ccedil;&atilde;o: 
 </P>
-<P CLASS="western" STYLE="margin-left: 0.24in; margin-bottom: 0in">		***********foto
-da fun&ccedil;&atilde;o utilizada***********</P>
+<P CLASS="western" STYLE="margin-left: 0.24in; margin-bottom: 0in"><img src="qrc:/images/bw_alta.png" /></P>
 <P CLASS="western" STYLE="margin-left: 0.24in; margin-bottom: 0in"><BR>
 </P>
 <P CLASS="western" STYLE="margin-left: 0.24in; margin-bottom: 0in"><BR>
@@ -157,42 +151,11 @@ originais.</P>
 Espectro de Fourier:</P>
 <P CLASS="western" STYLE="margin-bottom: 0in; font-weight: medium; text-decoration: none">
 <BR>
+<img src="qrc:/images/spectrum.png" />
 </P>
 <P CLASS="western" STYLE="margin-bottom: 0in; font-weight: medium; text-decoration: none">
 O espectro &eacute; gerado calculando a magnitude de cada ponto da
 matriz de complexo 
-</P>
-<P CLASS="western" STYLE="margin-bottom: 0in; font-weight: medium; text-decoration: none">
-<BR>
-</P>
-<P CLASS="western" STYLE="margin-bottom: 0in; font-weight: medium; text-decoration: none">
-<BR>
-</P>
-<P CLASS="western" STYLE="margin-bottom: 0in; font-weight: medium; text-decoration: none">
-<BR>
-</P>
-<P CLASS="western" STYLE="margin-bottom: 0in; font-weight: medium; text-decoration: none">
-vey.. to morrendo de sono... vou te entregar essa parte depois mando
-o resto se precisar .. t+</P>
-<P CLASS="western" STYLE="margin-bottom: 0in; font-weight: medium; text-decoration: none">
-flw</P>
-<P CLASS="western" STYLE="margin-bottom: 0in; font-weight: medium; text-decoration: none">
-<BR>
-</P>
-<P CLASS="western" STYLE="margin-bottom: 0in; font-weight: medium; text-decoration: none">
-<BR>
-</P>
-<P CLASS="western" STYLE="margin-left: 0.24in; margin-bottom: 0in"><BR>
-</P>
-<P CLASS="western" STYLE="margin-left: 0.24in; margin-bottom: 0in"><BR>
-</P>
-<P CLASS="western" STYLE="margin-left: 0.24in; margin-bottom: 0in"><BR>
-</P>
-<P CLASS="western" STYLE="margin-left: 0.24in; margin-bottom: 0in"><BR>
-</P>
-<P CLASS="western" STYLE="margin-left: 0.24in; margin-bottom: 0in"><BR>
-</P>
-<P CLASS="western" STYLE="margin-bottom: 0in"><BR>
 </P>
 </BODY>
 </HTML>
