Corrections on spectrum; Adding special filter to help; Changing spectrum image on help; Removing the wrongly added menu in main.ui;

--- a/src/help/filters.html
+++ b/src/help/filters.html
@@ -28,6 +28,6 @@
   </ul>
 
   <h3>Filtro Especial:</h3>
-  <p>Seleciona-se na imagem do espectro de fourier os pontos onde haverá o corte, simplesmente clicando e arrastando o mouse pela imagem (desenhando quadriláteros).</p>
+  <p>Seleciona-se na imagem do espectro de fourier os pontos onde haverá o corte, simplesmente clicando e arrastando o mouse pela imagem (desenhando quadriláteros).<br /><img src="qrc:/images/special.png" /></p>
 </body>
 </html>
